# cgn-ec-api

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
cgn_ec_api/: config.py  dependencies.py  exceptions.py  main.py  models.py
cgn_ec_api/controllers/: address_mapping.py  base.py  port_block_mapping.py  port_mapping.py  session_mapping.py
cgn_ec_api/crud/: __init__.py  address_mapping.py  admin.py  base.py  port_block_mapping.py  port_mapping.py  session_mapping.py
cgn_ec_api/dependencies/: auth.py  database.py  redis.py
cgn_ec_api/hooks/: example.py
cgn_ec_api/models/: generic.py  metrics.py  query.py
cgn_ec_api/views/: __init__.py  address_mappings.py  admin.py  deterministic_nat.py  port_block_mappings.py  port_mappings.py  session_mappings.py
tests/: conftest.py  generate_test_data.py
tests/api/v1/: test_api_v1_address_mappings.py  test_api_v1_port_block_mappings.py  test_api_v1_port_mappings.py  test_api_v1_session_mappings.py
tests/fixtures/: metrics.py
