[tool.poetry]
name = "cgn-ec-api"
version = "0.3.0"
description = "CGN-EC API"
authors = ["BSpendlove <8687668+BSpendlove@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.8.1"
cgn-ec-models = "^0.2.0"
fastapi = "^0.115.11"
psycopg = {extras = ["binary"], version = "^3.2.6"}
structlog = "^25.2.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
