[tool.poetry]
name = "cgn-ec-api"
version = "0.6.1"
description = "CGN-EC API"
authors = ["BSpendlove <8687668+BSpendlove@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.8.1"
fastapi = "^0.115.11"
psycopg = {extras = ["binary"], version = "^3.2.6"}
structlog = "^25.2.0"
redis = "^5.2.1"
h11 = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
testcontainers = "^4.10.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
